*screenshots veranderd + link in de view naar een andere controller + view

--- a/views/home/home.html
+++ b/views/home/home.html
@@ -3,3 +3,4 @@
 <!-- door hier msg aan te roepen, laat ik de msg variabele zien die ik meegegeven heb
      vanuit de controller -->
 {{=msg}}
+<a href="{{=link}}">Klik hier</a>
