oops, er was iets verkeerd gegaan

--- a/views/formulier/formulier.html
+++ b/views/formulier/formulier.html
@@ -2,3 +2,5 @@
 
 <!-- form variabele meegegeven vanuit de home controller van formulier() -->
 {{=form}}
+
+<a href="{{=link}}">Klik hier voor een overzicht</a>
